# synapse-ai

./: .codacy.yaml  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  hatch_build.py  launch_browser.py  package.json  pyproject.toml  setup.ps1  setup.py  setup.sh  start.ps1  start.sh
.github/workflows/: codacy.yml  codeql.yml  publish.yml
backend/: debug_auth.py  debug_gmail.py  main.py  package-lock.json  requirements-coding.txt  requirements-messaging.txt  requirements.txt
backend/core/: agent_logger.py  builder_tools.py  compaction.py  config.py  internal_auth.py  json_store.py  llm_providers.py  mcp_client.py  mcp_oauth_state.py  memory.py  models.py  models_orchestration.py  models_schedule.py  personal_details.py  profiling.py  react_engine.py  schedule_logger.py  scheduler.py  server.py  session.py  tools.py  usage_tracker.py  vault.py
backend/core/messaging/: __init__.py  base.py  manager.py  markdown.py  store.py
backend/core/native_builder/: __init__.py  (+1 more)
backend/data/: mcp_servers.example.json
backend/examples/: build_bundles.py  developer_pack.bundle.json  index.json  mcp_pack.bundle.json  orchestrations.example.json  productivity_pack.bundle.json  simple_orch.bundle.json  starter_pack.bundle.json  user_agents.example.json
backend/services/: code_indexer.py  google.py  n8n_sync.py  synthetic_data.py
backend/tools/: bash.py  code_indexer.py  code_search.py  collect_data.py  map_details.py  pdf_parser.py  personal_details.py  sandbox.Dockerfile  sandbox.py  sql_agent.py  time.py  xlsx_parser.py
docs/: cli.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/scripts/: load-env.js
frontend/src/: middleware.ts
scripts/: build_frontend.sh  bundle-frontend.js
synapse/: __main__.py  cli.py  setup_wizard.py
(+106 files in other folders)
