[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-ai"
version = "0.1.0"
description = "Synapse - A Multi Agent Orchestrator"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "mcp", "llm", "orchestrator", "local", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "mcp>=1.0",
    "chromadb>=0.5",
    "ollama>=0.2",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "duckduckgo-search>=6.0",
    "boto3>=1.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "anthropic>=0.28",
]

[project.scripts]
synapse = "synapse.cli:main"
"synapse-ai" = "synapse.cli:main"

[project.urls]
Homepage = "https://github.com/naveenraj-17/synapse-ai"
Repository = "https://github.com/naveenraj-17/synapse-ai"
Issues = "https://github.com/naveenraj-17/synapse-ai/issues"

[tool.hatch.build.targets.wheel]
include = [
    "synapse/",
    "backend/core/",
    "backend/services/",
    "backend/tools/",
    "backend/main.py",
]

[tool.bandit]
targets = ["backend", "synapse"]
exclude_dirs = [
    "backend/venv",
    "backend/.venv",
    "backend/data",
    "backend/logs",
    "backend/chroma_db",
]
skips = []
